--- a/css/main.css
+++ b/css/main.css
@@ -100,3 +100,7 @@ font-size: 20px;}
 .donate:hover {opacity: 1}
 
 .dna {font-size:20px}
+
+#searchfield {height:40px; width:140px; border-radius:5px; border:1px black solid;}
+
+#toplist-artists {padding-left:240px}
